# fuzzcover

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE.MIT  README.md
examples/: CMakeLists.txt  dumper.cpp  fuzzer.cpp  tester.cpp
examples/iban/: iban.hpp  iban_fuzz.cpp  iban_fuzz.hpp
examples/json/: dumper.cpp  fuzzer.cpp  fuzzer_lexer_scan.cpp  fuzzer_lexer_scan.hpp  fuzzer_lexer_scan_number.cpp  fuzzer_lexer_scan_number.hpp  fuzzer_lexer_scan_string.cpp  fuzzer_lexer_scan_string.hpp  fuzzer_parse.cpp  fuzzer_parse.hpp  fuzzer_parse_cbor.hpp  fuzzer_roundtrip_string.cpp  fuzzer_roundtrip_string.hpp  fuzzer_serializer_decode.cpp  fuzzer_serializer_decode.hpp  fuzzer_serializer_dump_escaped.hpp  fuzzer_serializer_dump_float.cpp  fuzzer_serializer_dump_float.hpp  fuzzer_serializer_dump_integer.cpp  fuzzer_serializer_dump_integer.hpp  fuzzer_to_chars.cpp  fuzzer_to_chars.hpp  tester.cpp
examples/picohash/: picohash.h  picohash_md5.cpp  picohash_md5.hpp  picohash_sha1.cpp  picohash_sha1.hpp  picohash_sha256.cpp  picohash_sha256.hpp
examples/ramer-douglas-peucker/: ramer_douglas_peucker.hpp  ramer_douglas_peucker_fuzz.cpp  ramer_douglas_peucker_fuzz.hpp
examples/spellnumber/: spell_number.hpp  spell_number_fuzz.cpp  spell_number_fuzz.hpp
include/fuzzcover/: FuzzedDataProvider.h  fuzzcover.hpp
tools/: fuzzcover.py  minimize_corpus_files.py  minimize_corpus_length.py  requirements.txt
